Fix some layout issues with #board

--- a/public/cards.css
+++ b/public/cards.css
@@ -2,7 +2,7 @@
   /*background-color: grey;*/
   /*padding: 5vh;*/
   margin: 0px auto;
-  width: 70%;
+  width: 100%;
   height: 100vh;
   max-height: 730px;
   /*text-align: center;*/
